# aoc2022

./: .gitignore  Cargo.toml
aoc/: Cargo.toml
aoc/src/: day.rs  main.rs  template.txt
day01-1/: Cargo.toml
day01-1/src/: main.rs
day01-2/: Cargo.toml
day01-2/src/: main.rs
day02-1/src/: main.rs
day02-2/: Cargo.toml
day02-2/src/: main.rs
day03-1/src/: main.rs
day03-2/: Cargo.toml
day03-2/src/: main.rs
day04-1/: Cargo.toml
day04-1/src/: main.rs
day04-2/: Cargo.toml
day04-2/src/: main.rs
day05-1/: Cargo.toml
day05-1/src/: main.rs
day05-2/: Cargo.toml
day05-2/src/: main.rs
day06-1/: Cargo.toml
day06-1/src/: main.rs
day06-2/: Cargo.toml
day06-2/src/: main.rs
day07-1/: Cargo.toml
day07-1/src/: filesystem.rs  main.rs
day07-2/: Cargo.toml
day07-2/src/: main.rs
day08-1/: Cargo.toml
day08-1/src/: main.rs
day08-2/: Cargo.toml
day08-2/src/: main.rs
day09-1/: Cargo.toml
day09-1/src/: main.rs
day09-2/: Cargo.toml
day09-2/src/: main.rs
day10-1/: Cargo.toml
day10-1/src/: main.rs
day10-2/: Cargo.toml
day10-2/src/: main.rs
day11-1/: Cargo.toml
day11-1/src/: main.rs
day11-2/: Cargo.toml
day11-2/src/: main.rs
day12-1/: Cargo.toml
day12-1/src/: main.rs
day12-2/: Cargo.toml
day12-2/src/: main.rs
day13-1/: Cargo.toml
day13-1/src/: list.pest  main.rs
day13-2/: Cargo.toml
day13-2/src/: main.rs
day14-1/: Cargo.toml
day14-1/src/: main.rs
day14-2/: Cargo.toml
day14-2/src/: main.rs
day15-1/: Cargo.toml
day15-1/src/: main.rs
day15-2/: Cargo.toml
day15-2/src/: main.rs
util/: Cargo.toml
(+3 files in other folders)
