[workspace]
members = [
  "aoc"
, "day01-1"
, "day01-2"
, "day02-1"
, "day02-2"
, "day03-1"
, "day03-2"
, "day04-1"
, "day04-2"
, "day05-1"
, "day05-2"
, "day06-1"
, "day06-2"
, "util", "day07-1", "day07-2", "day08-1", "day08-2", "day09-1", "day09-2", "day10-1", "day10-2", "day11-1", "day11-2", "day12-1", "day12-2", "day13-1", "day13-2", "day14-1"]
